--- a/web-test/src/index.css
+++ b/web-test/src/index.css
@@ -1,5 +1,14 @@
+html, body, #root {
+  display: flex;
+  flex: 1;
+  min-height: 100%;
+}
+
 body {
-  margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+#root {
+  align-items: flex-start;
 }
